--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -6,19 +6,29 @@
     <title>Bassim's Site</title>
     <meta name="description" content="{{ description }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='output.css') }}">
+    <style>
+  .gradient-border {
+    border: 2px solid;
+    border-image: linear-gradient(to right, yellow, orange) 1;
+    border-image-slice: 1;
+    border-radius: 0.25rem;
+  }
+    </style>    
   </head>
   <body class="bg-gray-100">
-    <div class="container mx-auto px-4 py-8">
+    <div class="container mx-auto px-4 py-8 text-center max-w-2xl">
+      <div class="border p-4 rounded relative gradient-border">
       <h1 class="text-3xl font-bold mb-4">Hi, My Name is Bassim!</h1>
-      <p class="text-xl mb-4">This is the second iteration of my personal website!</p>
-      <h2 class="text-2xl font-bold mt-4 mb-2">About The website</h2>
-        <p class="text-lg mb-4">I built this website using Flask and TailwindCSS with the help of GPT-4. I had no prior web development experience.</p>
+        <p class="text-xl mb-4">This is the second iteration of my personal website!</p>
+      <h2 class="text-2xl font-bold mt-4 mb-2">About The Website</h2>
+        <p class="text-lg mb-4">I built this website using Flask and TailwindCSS. I added a counter button and a small JS script to increment the counter by 1 when the button is clicked. I also added a hover feature to the counter element, where if you hover your mouse over the counter element the color will change.</p>
       <button id="click-me" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
         Click me!
       </button>
-      <span id="counter-display" class="inline-block bg-gray-300 border border-gray-50 px-4 py-2 ml-2 rounded text-center">
+      <span id="counter-display" class="inline-block bg-gray-300 hover:bg-blue-400 border-gray-50 px-4 py-2 ml-2 rounded text-center">
         0
-      </span>      
+      </span>  
+      </div>  
     </div>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
