--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -7,17 +7,16 @@
     <meta name="description" content="{{ description }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='output.css') }}">
     <style>
-  .gradient-border {
-    border: 2px solid;
-    border-image: linear-gradient(to right, yellow, orange) 1;
-    border-image-slice: 1;
-    border-radius: 0.25rem;
-  }
-    </style>    
+    .gradient-border {
+      border: 2px solid;
+      border-image: linear-gradient(to right, yellow, orange) 1;
+      border-radius: 1rem;
+    }
+    </style>   
   </head>
   <body class="bg-gray-100">
     <div class="container mx-auto px-4 py-8 text-center max-w-2xl">
-      <div class="border p-4 rounded relative gradient-border">
+      <div class="p-4 relative gradient-border">
       <h1 class="text-3xl font-bold mb-4">Hi, My Name is Bassim!</h1>
         <p class="text-xl mb-4">This is the second iteration of my personal website!</p>
       <h2 class="text-2xl font-bold mt-4 mb-2">About The Website</h2>
