--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -4,58 +4,44 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bassim's Site</title>
-    <meta name="description" content="{{ description }}">
+    <meta name="description" content="This is Bassim Shahidy's personal resume website. 
+        Bassim is an IT Support technician with expertise in IT, AV, data, and programming 
+        with Python, Flask, GPT-4, ChatGPT, Tailwind CSS, Cybersecurity, and Fraud Prevention">
     <link rel="stylesheet" href="{{ url_for('static', filename='output.css') }}">
-    <style>
-      .gradient-border {
-        position: relative;
-        display: inline-block;
-      }
-      .gradient-border::before {
-        content: "";
-        background: linear-gradient(to right, yellow, orange);
-        border-radius: 1rem;
-        position: absolute;
-        top: -2px;
-        left: -2px;
-        right: -2px;
-        bottom: -2px;
-        z-index: -1;
-      }
-      .content {
-        padding: 1rem;
-        border-radius: 0.9rem;
-      }
-    </style>     
   </head>
-  <body class="bg-gray-100">
+  <body class="bg-mycustom-200 text-white">
+    <div class="h-2 bg-gradient-to-r from-violet-500 to-fuchsia-500 fixed top-0 left-0 right-0"></div>
     <div class="container mx-auto px-4 py-8 text-center max-w-2xl">
-      <div class="gradient-border">
-        <div class="content bg-gray-100">
+      <div class="p-1.5 border border-transparent bg-gradient-to-tr from-violet-500 to-fuchsia-500 rounded-lg">
+        <div class="content bg-mycustom-100 p-6 rounded-lg">
           <h1 class="text-3xl font-bold mb-4">Hi, My Name is Bassim!</h1>
           <p class="text-xl mb-4">This is the second iteration of my personal website!</p>
-          <h2 class="text-2xl font-bold mt-4 mb-2">About The Website</h2>
-          <p class="text-lg mb-4">I built this website using Flask and TailwindCSS. I added a counter button and a small JS script to increment the counter by 1 when the button is clicked. I also added a hover feature to the counter element, where if you hover your mouse over the counter element the color will change.</p>
-          <button id="click-me" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+          <h2 class="text-2xl font-bold mt-4 mb-2">About The Website TEST!</h2>
+          <p class="text-lg mb-4">I built this website using Flask and TailwindCSS. I added a counter button and 
+            a small JS script to increment the counter by 1 when the button is clicked. I also added 
+            a hover feature to the counter element, where if you hover your mouse over the counter 
+            element the color will change.
+          </p>
+          <button id="click-me" class="bg-blue-500 hover:bg-blue-700 font-bold py-2 px-4 rounded">
             Click me!
           </button>
-          <span id="counter-display" class="inline-block bg-gray-300 hover:bg-blue-400 border-gray-50 px-4 py-2 ml-2 rounded text-center">
+          <span id="counter-display" class="inline-block bg-gray-400 hover:bg-slate-600 font-bold border-gray-50 px-4 py-2 ml-2 rounded text-center">
             0
-          </span>  
+          </span>
         </div>
       </div>
     </div>
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const button = document.getElementById('click-me');
-            const counterDisplay = document.getElementById('counter-display');
-            let counter = 0;
+      document.addEventListener('DOMContentLoaded', () => {
+        const button = document.getElementById('click-me');
+        const counterDisplay = document.getElementById('counter-display');
+        let counter = 0;
 
-            button.addEventListener('click', () => {
-                counter++;
-                counterDisplay.textContent = counter;
-            });
+        button.addEventListener('click', () => {
+          counter++;
+          counterDisplay.textContent = counter;
         });
-    </script>  
+      });
+    </script>
   </body>
 </html>
