left aligned and added more text and a list

--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -11,13 +11,19 @@
   </head>
   <body class="h-screen w-screen bg-mycustom-200">
     <div class="h-1.5 bg-gradient-to-r from-violet-500 to-fuchsia-500"></div>
-    <div class="mx-auto max-w-2xl px-4 py-8 text-center text-white">
+    <div class="mx-auto max-w-2xl px-4 py-8 text-left text-white">
       <div class="rounded-lg bg-gradient-to-tr from-violet-500 to-fuchsia-500 p-1">
         <div class="content rounded-md bg-mycustom-100 p-6">
           <h1 class="mb-4 text-3xl font-bold">Hi, My Name is Bassim!</h1>
-          <p class="mb-4 text-xl">This is the second iteration of my personal website!</p>
-          <h2 class="mt-4 mb-2 text-2xl font-bold">About The Website!</h2>
-          <p class="mb-4 text-lg">I built this website using Flask and TailwindCSS. I added a counter button and a small JS script to increment the counter by 1 when the button is clicked. I also added a hover feature to the counter element, where if you hover your mouse over the counter element the color will change.</p>
+          <p class="mb-4 text-xl">I'm an IT Techncian working at the NYC Bar Association</p>
+          <h2 class="mt-4 mb-2 text-2xl font-bold">About This Website</h2>
+          <p class="mb-4 text-lg">This is the second version of my website. I built the first version with Streamlit which allows you to create a website using only Python. Now That I'm learning CSS I am writing this website from scratch using Flask as the backend and TailwindCSS for styling.</p>
+          <h2 class="mt-4 mb-2 text-2xl font-bold">My IT Skills Include</h2>
+          <ul class="list-disc list-outside mb-4 pl-4">
+            <li class="mb-1">Hardware</li>
+            <li class="mb-1">Networking</li>
+            <li class="mb-1">Programming</li>
+          </ul>
           <button id="click-me" class="rounded bg-blue-500 py-2 px-4 font-bold text-white hover:bg-blue-700">Click me!</button>
           <span id="counter-display" class="ml-2 inline-block rounded border-gray-50 bg-slate-500 px-4 py-2 text-center font-bold hover:bg-blue-400"> 0 </span>
         </div>
