--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -6,30 +6,61 @@
     <title>Bassim's Site</title>
     <meta name="description" content="This is Bassim Shahidy's personal resume website. 
         Bassim is an IT Support technician with expertise in IT, AV, data, and programming 
-        with Python, Flask, GPT-4, ChatGPT, Tailwind CSS, Cybersecurity, and Fraud Prevention">
+        with Python, Flask, GPT-4, ChatGPT, TailwindCSS, Cybersecurity, and Fraud Prevention">
     <link rel="stylesheet" href="{{ url_for('static', filename='output.css') }}">
   </head>
-  <body class="h-screen w-screen bg-mycustom-200">
-    <div class="h-1.5 bg-gradient-to-r from-violet-500 to-fuchsia-500"></div>
+ <!--  <div class="bg-mycustom-200 h-full w-full">   only for background in TWplay -->
+  <body class="min-h-screen w-full bg-mycustom-200">
+    <div class="h-1.5 bg-gradient-to-r from-violet-600 via-blue-600 to-fuchsia-600"></div>
     <div class="mx-auto max-w-2xl px-4 py-8 text-left text-white">
-      <div class="rounded-lg bg-gradient-to-tr from-violet-500 to-fuchsia-500 p-1">
+      <div class="rounded-lg bg-gradient-to-tr from-violet-600 via-blue-600 to-fuchsia-600 p-1">
         <div class="content rounded-md bg-mycustom-100 p-6">
           <h1 class="mb-4 text-3xl font-bold">Hi, I'm Bassim!</h1>
-          <p class="mb-4 text-xl">I'm an IT Techncian working at the NYC Bar Association</p>
+          <p class="mb-4 text-xl">I'm an IT Technician working at the NYC Bar Association</p>
           <hr class="border-t border-gray-600 my-8">
           <h2 class="mt-4 mb-2 text-2xl font-bold">About This Website</h2>
           <p class="mb-4 text-lg">This is the second version of my website. I built the first version with Streamlit which allowed me to build it using only Python. Now That I'm learning CSS I'm writing this website from scratch using Flask as the backend and TailwindCSS for styling.</p>
         <hr class="border-t border-gray-600 my-8">
           <h2 class="mt-4 mb-2 text-2xl font-bold">My IT Skills Include</h2>
           <ul class="list-disc list-outside mb-4 pl-4">
-            <li class="mb-1">Hardware setup and repair</li>
-            <li class="mb-1">Cybersecurity</li>
-            <li class="mb-1">System troubleshooting</li>
+            <li class="mb-1.5">Hardware setup and troubleshooting</li>
+            <li class="mb-1.5">Software setup and troubleshooting</li>
+            <li class="mb-1.5">Network troubleshooting and setup</li>
+            <li class="mb-1.5">Cloud computing and virtualization</li>
+            <li class="mb-1.5">Operating systems and security</li>
           </ul>
-          <button id="click-me" class="rounded bg-blue-500 py-2 px-4 font-bold text-white hover:bg-blue-700">Click me!</button>
-          <span id="counter-display" class="ml-2 inline-block rounded border-gray-50 bg-slate-500 px-4 py-2 text-center font-bold hover:bg-blue-400"> 0 </span>
+          <button id="click-me" class="rounded-lg bg-indigo-600 py-2 px-4 font-bold text-white hover:bg-gradient-to-r from-violet-600 to-blue-600">Click me!</button>
+          <span id="counter-display" class="ml-2 inline-block rounded-lg border-gray-50 bg-slate-500 px-4 py-2 text-center font-bold hover:bg-gradient-to-r from-violet-600 to-blue-600"> 0 </span>
+                  <hr class="border-t border-gray-600 my-8">
+          <h2 class="mt-4 mb-2 text-2xl font-bold">I'm Currently Learning</h2>
+          <ul class="list-disc list-outside mb-4 pl-4">
+            <li class="mb-1.5">Backend web development with Flask and Python</li>
+            <li class="mb-1.5">Front end web design with Astro and TailwindCSS</li>
+            <li class="mb-1.5">Deploying LLMs like Alpaca and LLaMA on a local system</li>
+            <li class="mb-1.5">Building apps that integrate with OpenAI's API</li>
+            <li class="mb-1.5">Bulding plugins that integrate with ChatGPT</li>
+          </ul>
+      <section class="mt-8 mb-8 border-t border-gray-600">
+        <h2 class="mb-4 text-2xl font-bold my-8 text-white">Contact Me</h2>
+        <form action="#" class="space-y-6">
+          <div>
+            <label for="email" class="block mb-2 text-sm font-medium text-gray-300">Your email</label>
+            <input type="email" id="email" class="w-full p-2.5 text-sm rounded-lg shadow-sm border focus:ring-primary-500 focus:border-primary-500 bg-slate-700 border-gray-700" placeholder="name@example.com" required>
+          </div>
+          <div>
+            <label for="subject" class="block mb-2 text-sm font-medium text-gray-300">Subject</label>
+            <input type="text" id="subject" class="w-full p-3 text-sm rounded-lg shadow-sm border focus:ring-primary-500 focus:border-primary-500 bg-slate-700 border-gray-700" placeholder="Message Subject" required>
+          </div>
+          <div>
+            <label for="message" class="block mb-2 text-sm font-medium text-gray-300">Your message</label>
+            <textarea id="message" rows="6" class="w-full p-2.5 text-sm rounded-lg shadow-sm border focus:ring-primary-500 focus:border-primary-500 bg-slate-700 border-gray-700" placeholder="Leave a message..."></textarea>
+          </div>
+          <button type="submit" class="py-2 px-5 font-bold text-center text-white rounded-lg bg-indigo-600 hover:bg-gradient-to-r from-violet-600 to-blue-600 focus:ring-4 focus:outline-none focus:ring-primary-300">Submit</button>
+        </form>
+      </section>
         </div>
       </div>
+    </div>
     </body>
     <script>
       document.addEventListener('DOMContentLoaded', () => {
