--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -42,18 +42,18 @@
           </ul>
       <section class="mt-8 mb-8 border-t border-gray-600">
         <h2 class="mb-4 text-2xl font-bold my-8 text-white">Contact Me</h2>
-        <form action="#" class="space-y-6">
+        <form action="https://formspree.io/f/mlekwory" method="POST" class="space-y-6">
           <div>
             <label for="email" class="block mb-2 text-sm font-medium text-gray-300">Your email</label>
-            <input type="email" id="email" class="w-full p-2.5 text-sm rounded-lg shadow-sm border focus:ring-primary-500 focus:border-primary-500 bg-slate-700 border-gray-700" placeholder="name@example.com" required>
+            <input type="email" id="email" name="email" class="w-full p-2.5 text-sm rounded-lg shadow-sm border focus:ring-primary-500 focus:border-primary-500 bg-slate-700 border-gray-700" placeholder="name@example.com" required>
           </div>
           <div>
             <label for="subject" class="block mb-2 text-sm font-medium text-gray-300">Subject</label>
-            <input type="text" id="subject" class="w-full p-3 text-sm rounded-lg shadow-sm border focus:ring-primary-500 focus:border-primary-500 bg-slate-700 border-gray-700" placeholder="Message Subject" required>
+            <input type="text" id="subject" name="subject" class="w-full p-3 text-sm rounded-lg shadow-sm border focus:ring-primary-500 focus:border-primary-500 bg-slate-700 border-gray-700" placeholder="Message Subject" required>
           </div>
           <div>
             <label for="message" class="block mb-2 text-sm font-medium text-gray-300">Your message</label>
-            <textarea id="message" rows="6" class="w-full p-2.5 text-sm rounded-lg shadow-sm border focus:ring-primary-500 focus:border-primary-500 bg-slate-700 border-gray-700" placeholder="Leave a message..."></textarea>
+            <textarea id="message" name="message" rows="6" class="w-full p-2.5 text-sm rounded-lg shadow-sm border focus:ring-primary-500 focus:border-primary-500 bg-slate-700 border-gray-700" placeholder="Leave a message..."></textarea>
           </div>
           <button type="submit" class="py-2 px-5 font-bold text-center text-white rounded-lg bg-indigo-600 hover:bg-gradient-to-r from-violet-600 to-blue-600 focus:ring-4 focus:outline-none focus:ring-primary-300">Submit</button>
         </form>
